# Life_Tracker

./: .dockerignore  .gitignore  db_design.excalidraw  docker-compose.yml  domain.md  invariants.md
.devcontainer/: devcontainer.json
api_design/: middleware.md
api_design/auth/: auth.api.md
api_design/behaviour/: behavior.api.md
api_design/task/: task.api.md
backend/: Dockerfile  pyproject.toml
backend/src/alembic/: env.py
backend/src/alembic/versions/: 14f82a83bd6d_create_users_and_auth_identity_table.py  924eed278d58_remove_unique_constraint_from_refresh_.py  dd2f6a5de7fe_create_refresh_token_table.py
backend/src/app/: main.py
backend/src/app/auth/: dependencies.py  exception_handler.py  exceptions.py  models.py  router.py  schemas.py  security.py  service.py  utils.py
backend/src/app/core/: context.py  enums.py  exception_handler.py  exceptions.py  log_context.py  logging.py  middleware.py  register_handlers.py  setting.py  utils.py
backend/src/app/db/: base.py  config.py
backend/src/app/db/redis/: config.py
backend/src/app/test/: router.py
backend/src/app/user/: models.py
db_design/: db_design.md
