[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.1",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.128.0",
    "pydantic>=2.12.5",
    "pyjwt[crypto]>=2.10.1",
    "sqlalchemy[asyncio]>=2.0.45",
    "uvicorn[standard]",
]

[dependency-groups]
dev = [
    "ruff>=0.14.14",
]
